--- a/config.yml.sample
+++ b/config.yml.sample
@@ -4,5 +4,5 @@ allow:
     - 443
 deny:
   ip:
-    # Malicious, scanning for vulnerable servers
+    # Malicious. Scanning for vulnerable servers
     - 185.12.128.197
